<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_send_white"
        android:orderInCategory="100"
        android:title="@string/send"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scan_sms"
        android:orderInCategory="100"
        android:title="@string/scan_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white"
        android:orderInCategory="100"
        android:title="@string/delete_all"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>